# oslo.upgradecheck

./: .coveragerc  .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  main.py  usage.rst
oslo_upgradecheck/: __main__.py  _i18n.py  common_checks.py  upgradecheck.py
oslo_upgradecheck/tests/: test_common_checks.py  test_upgradecheck.py
releasenotes/source/: conf.py  index.rst
