[metadata]
name = oslo.upgradecheck
summary = Common code for writing OpenStack upgrade checks
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://launchpad.net/oslo
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_upgradecheck

[compile_catalog]
directory = oslo.upgradecheck/locale
domain = oslo.upgradecheck

[update_catalog]
domain = oslo.upgradecheck
output_dir = oslo.upgradecheck/locale
input_file = oslo.upgradecheck/locale/oslo.upgradecheck.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.upgradecheck/locale/oslo.upgradecheck.pot
